[gd_scene load_steps=27 format=3 uid="uid://43vm2ufym55r"]

[ext_resource type="Script" path="res://Enemies/bat.gd" id="1_rgqpi"]
[ext_resource type="Texture2D" uid="uid://do4v1jabld7e4" path="res://Enemies/Bat.png" id="1_yxp2h"]
[ext_resource type="Shader" path="res://whitecolor.gdshader" id="2_aalq0"]
[ext_resource type="Texture2D" uid="uid://cal017s1vubn2" path="res://Shadows/SmallShadow.png" id="2_tgv2d"]
[ext_resource type="PackedScene" uid="uid://djymhmhx33hxy" path="res://Collision/hurtbox.tscn" id="3_0d4yd"]
[ext_resource type="PackedScene" uid="uid://c14vk57y1nqd" path="res://stats.tscn" id="5_74lhq"]
[ext_resource type="PackedScene" uid="uid://co7ms7nj0xe7a" path="res://Enemies/player_detection_zone.tscn" id="6_lryv5"]
[ext_resource type="PackedScene" uid="uid://crwyh0oolue7g" path="res://Collision/hitbox.tscn" id="7_ym4ny"]
[ext_resource type="PackedScene" uid="uid://bjf5faqdhk3x5" path="res://Collision/soft_collision.tscn" id="8_mx4pn"]
[ext_resource type="PackedScene" uid="uid://dpa23xgvonskw" path="res://Enemies/wander_controller.tscn" id="9_b5j8g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vdkpa"]
resource_local_to_scene = true
shader = ExtResource("2_aalq0")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_mqhrb"]
atlas = ExtResource("1_yxp2h")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iy8c"]
atlas = ExtResource("1_yxp2h")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6q42"]
atlas = ExtResource("1_yxp2h")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmymf"]
atlas = ExtResource("1_yxp2h")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0qqs"]
atlas = ExtResource("1_yxp2h")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_8bni6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqhrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iy8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6q42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmymf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0qqs")
}],
"loop": true,
"name": &"Fly",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gblpc"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g7rx5"]
radius = 7.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kybmu"]
radius = 70.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2br3q"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ajysf"]
radius = 5.09902

[sub_resource type="Animation" id="Animation_eh8b6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dhyg7"]
resource_name = "start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_tkyqt"]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_can21"]
_data = {
"RESET": SubResource("Animation_eh8b6"),
"start": SubResource("Animation_dhyg7"),
"stop": SubResource("Animation_tkyqt")
}

[node name="Bat" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource("1_rgqpi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_vdkpa")
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_8bni6")
animation = &"Fly"
autoplay = "Fly"
frame_progress = 0.381771

[node name="ShadowSprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_tgv2d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gblpc")

[node name="Hurtbox" parent="." instance=ExtResource("3_0d4yd")]
collision_mask = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_g7rx5")

[node name="Stats" parent="." instance=ExtResource("5_74lhq")]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource("6_lryv5")]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource("CircleShape2D_kybmu")
debug_color = Color(0.796078, 0.423529, 0, 0.290196)

[node name="Hitbox" parent="." instance=ExtResource("7_ym4ny")]
collision_layer = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_2br3q")
debug_color = Color(0.97272, 0, 0.439068, 0.42)

[node name="SoftCollision" parent="." instance=ExtResource("8_mx4pn")]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource("CircleShape2D_ajysf")
debug_color = Color(0.388235, 0.509804, 0.886275, 0.490196)

[node name="WanderController" parent="." instance=ExtResource("9_b5j8g")]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_can21")
}

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
